Add x448 lib as submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "protobuf"]
 	path = protobuf
 	url = https://telematik.prakinf.tu-ilmenau.de/gitlab/dschatz/hydra-grpc.git
+[submodule "include/x448"]
+	path = include/x448
+	url = https://telematik.prakinf.tu-ilmenau.de/gitlab/dschatz/x448.git
