--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ hex = "^0.4"
 tonic = "^0.2"
 prost = "^0.6"
 tokio = { version = "^0.2", features = ["macros", "rt-threaded"] }
+futures-core = "^0.3"
 log = "^0.4"
 
 [build-dependencies]
