Launch grpc directory server in main

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ async-stream = "^0.2"
 futures-core = "^0.3"
 futures-util = "^0.3"
 log = "^0.4"
+simplelog = "^0.7"
 
 [build-dependencies]
 cmake = "^0.1"
