Add cache to gitlab CI

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,10 @@
 variables:
     GIT_SUBMODULE_STRATEGY: recursive
 
+cache:
+    paths:
+        - target/
+
 cargo test:
     stage: test
     only:
