WIP #2: Implement send for SimpleRelay gRPC service

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 openssl-sys = "^0.9"
 openssl = "^0.10"
 hex = "^0.4"
+byteorder = "^1"
 tonic = "^0.2"
 prost = "^0.6"
 tokio = { version = "^0.2", features = ["macros", "rt-threaded"] }
