--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ futures-core = "^0.3"
 futures-util = "^0.3"
 log = "^0.4"
 simplelog = "^0.7"
+clap = "^2"
 
 [build-dependencies]
 cmake = "^0.1"
