Update skein3fish submodule to use new gitlab fork

--- a/.gitmodules
+++ b/.gitmodules
@@ -6,4 +6,4 @@
 	url = ../x448.git
 [submodule "include/skein3fish"]
 	path = include/skein3fish
-	url = https://github.com/wyv3rn/Skein3Fish.git
+	url = https://telematik.prakinf.tu-ilmenau.de/gitlab/hydra/skein3fish
