--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ hkdf = "^0.9"
 spmc = "^0.3"
 rayon = "^1"
 crossbeam-channel = "^0.4"
+bloomfilter = "1.0.3"
 
 [build-dependencies]
 cmake = "^0.1"
