--- a/.gitmodules
+++ b/.gitmodules
@@ -4,6 +4,6 @@
 [submodule "include/x448"]
 	path = include/x448
 	url = ../x448.git
-[submodule "include/skein3fish"]
-	path = include/skein3fish
-	url = ../skein3fish.git
+[submodule "include/threefish"]
+	path = include/threefish
+	url = https://telematik.prakinf.tu-ilmenau.de/gitlab/hydra/threefish
