Make firebase server token configurable

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ openssl = "^0.10"
 hex = "^0.4"
 byteorder = "^1"
 http = "^0.2"
-tonic = {version = "^0.3", features = ["transport", "tls"] }
+tonic = { version = "^0.3", features = ["transport", "tls"] }
 prost = "^0.6"
 tokio = { version = "^0.2", features = ["macros", "rt-threaded"] }
 futures-core = "^0.3"
@@ -30,6 +30,8 @@ crossbeam-channel = "^0.5"
 bloomfilter = "1.0.3"
 fcm = "^0.7"
 derive_builder = "^0.9"
+serde = { version = "^1", features = ["derive"] }
+config = { version = "^0.10", default-features = false, features = ["toml"] }
 
 [build-dependencies]
 cmake = "^0.1"
